/*
 * Copyright 2023 tison <wander4096@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package datatree;

enum RequestType {
  ReqCreate = 0;
  ReqGetData = 1;
}

message RequestHeader {
  uint64 req_id = 1;
  RequestType req_type = 2;
}

message ReplyHeader {
  uint64 req_id = 1;
  uint64 txn_id = 2;
  int32 err = 3;
}

message CreateRequest {
  string path = 1;
  bytes data = 2;
}

message CreateReply {
  string path = 1;
}

message GetDataRequest {
  string path = 1;
}

message GetDataReply {
  bytes data = 1;
}
